applications/milvus/base-standalone/milvus-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: milvus-service
spec:
  ports:
    - name: grpc
      port: 19530
      targetPort: 19530
    - name: http
      port: 9091
      targetPort: 9091
  selector:
    app: milvus-standalone
