applications/milvus/base-standalone/route.yaml
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: milvus-console
spec:
  path: /webui
  to:
    kind: Service
    name: milvus-service
  port:
    targetPort: http
  tls:
    termination: edge
  wildcardPolicy: None
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: milvus-metrics
spec:
  to:
    kind: Service
    name: milvus-service
  port:
    targetPort: http
  tls:
    termination: edge
